done with generating the token
